--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>SDC-AIR - Register Account</title>
 </head>
 <body class="min-vh-100 bg-dark bg-gradient">
@@ -81,12 +83,15 @@
                         <button id="btnRegister" type="button" class="btn btn-primary bg-gradient col-12 mt-2">Register</button>
                         <div class="d-flex justify-content-center align-items-center">
                             Already have an account?
-                            <button id="btnSwapLoginBottom" type="button" class="btn btn-link mb-0">Log in</button>
+                            <button id="btnSwapLoginBottom" type="button" href="" class="btn btn-link mb-0">Log in</button>
                         </div>
                     </div>
                 </form>
-                
-        
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- JQuery Script -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
