Added switching between pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
                 
                 <div class="d-flex justify-content-center align-items-center mt-2">
                     Need an account?
-                    <button id="btnSwapRegister" type="button" class="btn btn-link mt-0">Register here</button>
+                    <a class="ms-2" id="btnSwapRegister" href="register.html">Register here</a>
                 </div>
             </div>
         </form>
