--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>SDC-AIR - Register Account</title>
 </head>
-<body class="min-vh-100 bg-dark bg-gradient">
+<body class="min-vh-100 bg-dark bg-gradient" id="registerBody">
     <div class="d-flex mt-5 mb-5 justify-content-center align-items-center vh-70">
                 <!-- Register Form -->
                 <form id="frmRegister" class="card col-10 col-md-6 col-xl-4 mt-5">
