--- a/frontend/register.html
+++ b/frontend/register.html
@@ -76,7 +76,12 @@
                                 <label for="txtRetypePassword">Retype Password</label>
                             </div>
                         </div>
-                
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="checkHost" name="CheckHost">
+                            <label class="form-check-label">Register as a Host Account?</label>
+                         </div> 
+
                         <hr class="mt-4 mb-4"/>
                         <button id="btnRegister" type="button" class="btn btn-primary bg-gradient col-12 mt-2">Register</button>
                         <div class="d-flex justify-content-center align-items-center mt-2">
