--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>SDC-AIR - Login</title>
 </head>
-<body class="min-vh-100 bg-dark bg-gradient" id="loginBody">
+<body class="min-vh-100" id="loginBody" style="background: url(images/bunch-houses-that-are-each-other_941033-7887.avif);  background-repeat: no-repeat; background-size: cover; background-position: center; background-blend-mode: multiply;">
     <div class="d-flex mt-5 mb-5 justify-content-center align-items-center vh-70">
         <form id="frmLogin" class="card col-10 col-md-6 col-xl-4 mt-5 rounded-3">
             <div class="card-body shadow">
