--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>SDC-AIR - Register Account</title>
 </head>
-<body class="min-vh-100 bg-dark bg-gradient" id="registerBody">
+<body class="min-vh-100" id="registerBody" style="background: url(images/bunch-houses-that-are-each-other_941033-7887.avif);  background-repeat: no-repeat; background-size: cover; background-position: center; background-blend-mode: multiply;">
     <div class="d-flex mt-5 mb-5 justify-content-center align-items-center vh-70">
                 <!-- Register Form -->
-                <form id="frmRegister" class="card col-10 col-md-6 col-xl-4 mt-5">
+                <form id="frmRegister" class="card col-10 col-md-6 col-xl-4 mt-5" >
                     <div class="card-body shadow">
                         <h1 class="text-center text-primary fw-bold">SDC Air</h1>
                         <h3 class="text-center text-dark">Register Account</h3>
