--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="styles/custom.css" rel="stylesheet">
     <title>SDC-AIR - Register Account</title>
 </head>
-<body class="min-vh-100" id="registerBody" style="background: url(images/bunch-houses-that-are-each-other_941033-7887.avif);  background-repeat: no-repeat; background-size: cover; background-position: center; background-blend-mode: multiply;">
+<body class="background min-vh-100" id="registerBody">
     <div class="d-flex mt-5 mb-5 justify-content-center align-items-center vh-70">
                 <!-- Register Form -->
                 <form id="frmRegister" class="card col-10 col-md-6 col-xl-4 mt-5" >
